--- a/backend/ManufacturerErpPoc/src/main/resources/application.properties
+++ b/backend/ManufacturerErpPoc/src/main/resources/application.properties
@@ -1,1 +1,7 @@
 spring.application.name=ManufacturerErpPoc
+spring.datasource.url=jdbc:mysql://localhost:3306/erp_poc?createDatabaseIfNotExist=true
+spring.datasource.username=root
+spring.datasource.password=rootroot
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
